hphp/test/zend/good/ext-standard-array/bug14580.php
<?php
	$arr = array (b"foo\0bar" => b"foo\0bar");
	$key = key($arr);
	echo strlen($key), ': ';
	echo urlencode($key), "\n";
?>